--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ typer = "^0.15.1"  # Modern CLI framework
 attrs = "^25.1.0"
 toolz = "^1.0.0"
 backoff = "^2.2.1"
-
+prefect = "^3.2.7"
 aiosqlite = "^0.21.0"  # Async SQLite support
 
 [tool.poetry.group.dev.dependencies]
