--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,11 +6,9 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
 -   repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.1.15
+    rev: v0.9.9  # Match your local Ruff version
     hooks:
     -   id: ruff
-        args: [--fix]
--   repo: https://github.com/psf/black
-    rev: 24.1.1
-    hooks:
-    -   id: black
+        args: [--fix, --select=I]  # Run import sorting first
+    -   id: ruff
+        args: [--fix]  # Then run all other fixes
