--- a/.env.example
+++ b/.env.example
@@ -13,10 +13,10 @@ LASTFM_PASSWORD=your_lastfm_password
 #logging
 CONSOLE_LOG_LEVEL=INFO
 FILE_LOG_LEVEL=DEBUG
-LOG_FILE=narada.log
+LOG_FILE=data/logs/app/narada.log
 
 # Optional database settings
-DATABASE_URL=sqlite+aiosqlite:///narada.db
+DATABASE_URL=sqlite+aiosqlite:///data/db/narada.db
 DATABASE_ECHO=false
 DATABASE_POOL_SIZE=5
 DATABASE_MAX_OVERFLOW=10
