Improved cli and like/love syncing

--- a/narada/workflows/definitions/sort_by_release_date.json
+++ b/narada/workflows/definitions/sort_by_release_date.json
@@ -8,7 +8,7 @@
       "id": "source",
       "type": "source.spotify_playlist",
       "config": {
-        "playlist_id": "03xJ28l0eGh3UfZPOtPEl7"
+        "playlist_id": "1uijxjRc9wwXXzHJ0paDJi"
       }
     },
     {
