--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "narada"
-version = "0.1.2"
+version = "0.2.0"
 description = "Music metadata integration and playlist management platform"
 authors = ["Ash Wright <a@ashwright.net>"]
 homepage = "https://github.com/w-ash/narada"
@@ -32,8 +32,9 @@ pytest = "^8.3.4"
 pytest-asyncio = "^0.25.3"  # Async test support
 pytest-cov = "^6.0.0"
 black = "^25.1.0"
-ruff = "^0.9.9"  # Modern replacement for isort, flake8, etc.
+ruff = "^0.11.0"  # Modern replacement for isort, flake8, etc.
 pre-commit = "^4.1.0"
+pyright = "^1.1.397"
 
 [tool.poetry.scripts]
 narada = "narada.cli.app:main"
@@ -95,7 +96,7 @@ combine-as-imports = true
 split-on-trailing-comma = true
 force-single-line = false           # Allow multi-line imports
 force-sort-within-sections = true   # Sort within sections
-from-first = false                  # Put "from" imports after regular imports
+from-first = false                  # Put "from" imports after regular imports (not before)
 detect-same-package = true          # Similar to grouping by package
 order-by-type = true                # Organize by import type
 
