--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,32 +9,32 @@ license = "MIT"
 packages = [{include = "narada"}]
 
 [tool.poetry.dependencies]
-python = "^3.13"
-sqlalchemy = {extras = ["asyncio"], version = "^2.0.38"}
-alembic = "^1.14.1"
+python = ">=3.13,<3.14"
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.40"}
+alembic = "^1.15.2"
 httpx = "^0.28.1"  # Modern async HTTP client replacement for requests
-spotipy = "^2.25.0"
-pylast = "^5.3.0"
+spotipy = "^2.25.1"
+pylast = "^5.5.0"
 musicbrainzngs = "^0.7.1"
 loguru = "^0.7.3"
-python-dotenv = "^1.0.1"
-rich = "^13.7.0"
-typer = "^0.15.1"  # Modern CLI framework
-attrs = "^25.1.0"
+python-dotenv = "^1.1.0"
+rich = "^14.0.0"
+typer = "^0.15.2"  # Modern CLI framework
+attrs = "^25.3.0"
 toolz = "^1.0.0"
 backoff = "^2.2.1"
-prefect = "^3.2.7"
+prefect = "^3.3.3"
 aiosqlite = "^0.21.0"  # Async SQLite support
-rapidfuzz = "^3.8.1"  # High-performance fuzzy string matching
+rapidfuzz = "^3.13.0"  # High-performance fuzzy string matching
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^8.3.4"
-pytest-asyncio = "^0.25.3"  # Async test support
-pytest-cov = "^6.0.0"
+pytest = "^8.3.5"
+pytest-asyncio = "^0.26.0"  # Async test support
+pytest-cov = "^6.1.1"
 black = "^25.1.0"
-ruff = "^0.11.0"  # Modern replacement for isort, flake8, etc.
-pre-commit = "^4.1.0"
-pyright = "^1.1.397"
+ruff = "^0.11.5"  # Modern replacement for isort, flake8, etc.
+pre-commit = "^4.2.0"
+pyright = "^1.1.399"
 
 [tool.poetry.scripts]
 narada = "narada.cli.app:main"
